--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,12 +27,4 @@ clone_depth: 1
 install:
   - ps: Install-Product node $env:nodejs_version x64
   - set CI=true
-  - yarn
-
-test_script:
-  - yarn package-ci
-  - yarn lint
-  # - yarn flow
-  - yarn test
-  - yarn build-e2e
-  - yarn test-e2e
+  - yarnE
